<resources>
    <string name="app_name">GiveGrub</string>
    <string name="hunger_free_nation">Hunger Free Nation</string>
    <string name="give_grub_logo">give_grub_logo</string>
    <string name="share_your_surplus">Share your surplus , norish a life</string>
    <string name="start">Start Explore -> </string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account_to_get_started">Create an account to get started</string>
    <string name="email_icon">Email Icon</string>
    <string name="email_address">Email Address</string>
    <string name="password_icon">Password Icon</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="username">UserName</string>
    <string name="user_icon">user_icon</string>
    <string name="choose_a_unique_user_id">choose a unique user id</string>
    <string name="sample_user_name">Enter your UserName</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account! Sign Up</string>
    <string name="welcome_back_please_log_in">Welcome back! Please log in.</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="save_profile_photo">Save Profile Photo</string>
    <string name="profile_image">Profile Image</string>
    <string name="set_your_profile_picture">Set Your Profile Picture</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="forget_password">Forget Password</string>
    <string name="we_ve_sent_you_a_link_to_reset_your_password">We’ve sent you a link to reset your password.</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="_00_60">00:60</string>
    <string name="please_check_your_spam_folder_if_you_don_t_see_the_email">Please check your spam folder if you don’t see the email.</string>
    <string name="your_password_has_been_changed_successfully">Once your password has been changed successfully! Navigate to Login</string>
    <string name="welcome_to_givegrub">Welcome to GiveGrub!</string>
    <string name="let_s_create_a_profile_that_shows_you_re_here_to_help">Let\'s create a profile that shows you\'re here to help.</string>
    <string name="choose_a_photo_to_represent_your_generous_spirit">Choose a photo to represent your generous spirit!</string>
    <string name="together_let_s_make_a_difference">Together, let\'s make a difference.</string>
    <string name="feeds">Feeds</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="notifications">Notifications</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="my_profile">My Profile</string>
    <string name="notifications_and_sounds">Notifications and Sounds</string>
    <string name="order_history">Order History</string>
    <string name="profile_picture">profile picture</string>
    <string name="profile">Profile</string>
    <string name="update_profile_picture">update profile picture</string>
    <string name="user_name_placeholder">user name placeholder</string>
    <string name="email_placeholder">email placeholder</string>
    <string name="settings">Settings</string>
    <string name="back_button">back button</string>
    <string name="add_chat">add chat</string>
    <string name="start_chat">Start Chat</string>
    <string name="enter_username">Enter Username</string>
    <string name="signout">SignOut</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="attachment">Attachment</string>
    <string name="dinning">dinning</string>
    <string name="enter_food_item">Enter food item</string>
    <string name="enter_venue">Enter venue</string>
    <string name="number_of_people">Number of people</string>
    <string name="food_available">Food Available🍜🥪</string>
    <string name="type_accept_to_accept_the_order">Type \'Accept\' to accept the order</string>
    <string name="add_feed">Add Feed</string>
    <string name="upload_feeds">Upload Feeds</string>
    <string name="photopreview">photoPreview</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="description">description</string>
    <string name="food_item">Food Item</string>
    <string name="venue">Venue</string>
    <string name="peoplecount">peopleCount</string>
    <string name="submit">Submit</string>
    <string name="no_feeds_available">No feeds available</string>
    <string name="add_group">Add Group</string>
    <string name="enter_groupname">Enter Group Name</string>
    <string name="start_group">Start Group</string>
    <string name="enter_description">Enter Description</string>
    <string name="add_user">Add User</string>
</resources>