<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".first.FirstActivity">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:contentDescription="@string/give_grub_logo"
        app:srcCompat="@drawable/givegrub" />

    <!-- Container for both TextViews -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

        <!-- First Text: Hunger-Free Nation -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_the_darkest_color"
            android:textStyle="bold"
            android:text="@string/hunger_free_nation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Second Text: Share Your Surplus -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/primary_the_darkest_color"
            android:text="@string/share_your_surplus"
            android:textStyle="italic"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <!-- Start Button -->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/primary_the_darkest_color"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:text="@string/start" />

</RelativeLayout>